--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-config-google": "^0.7.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "mithril": "^1.1.0",
     "uglify-js": "^2.8.12"
   },
   "description": "...coming soon...",
